--- a/src/html/topic/index.html
+++ b/src/html/topic/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8" />
     <title></title>
-    <!-- build:css ../../css/all.css -->
+    <!-- process-tags cssFun -->
     <link rel="stylesheet" href="../../css/dialog_css.css"/>
-    <!-- /build -->
+    <!-- end-process-tags -->
 </head>
 <body>
 <input type="button" id="btnDialog" value="show me the money"/>
 </body>
 <script src="../../js/lib/seajs/1.3.1/sea.js"></script>
-<!-- build:js ../../js/app/all.js -->
+<!-- process-tags jsFun -->
 <script src="../../js/rootConfig.js"></script>
-<!-- /build -->
+<!-- end-process-tags -->
 <script type="text/javascript">
     seajs.use("../../js/app/topic/index")
 </script>
