--- a/src/html/tpl/index.html
+++ b/src/html/tpl/index.html
@@ -5,14 +5,13 @@
 </head>
 <body>
 <div id="content">
-    
 </div>
 </body>
 
 <script src="../../js/lib/seajs/1.3.1/sea.js"></script>
-<!-- build:js ../../js/app/all.js -->
+<!-- process-tags jsFun -->
 <script src="../../js/rootConfig.js"></script>
-<!-- /build -->
+<!-- end-process-tags -->
 <script type="text/javascript">
     // 加载index模板
     seajs.use('../../js/app/tpl/index');
