--- a/src/html/topic/index.html
+++ b/src/html/topic/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8" />
     <title></title>
-    <!-- process-tags cssFun -->
+    <!-- build:xcss ../../css/all.css -->
     <link rel="stylesheet" href="../../css/dialog_css.css"/>
-    <!-- end-process-tags -->
+    <!-- /build -->
 </head>
 <body>
 <input type="button" id="btnDialog" value="show me the money"/>
 </body>
 <script src="../../js/lib/seajs/1.3.1/sea.js"></script>
-<!-- process-tags jsFun -->
+<!-- build:xjs ../../js/app/all.js -->
 <script src="../../js/rootConfig.js"></script>
-<!-- end-process-tags -->
+<!-- /build -->
 <script type="text/javascript">
     seajs.use("../../js/app/topic/index")
 </script>
