--- a/src/html/tpl/index.html
+++ b/src/html/tpl/index.html
@@ -9,9 +9,9 @@
 </body>
 
 <script src="../../js/lib/seajs/1.3.1/sea.js"></script>
-<!-- process-tags jsFun -->
+<!-- build:xjs ../../js/app/all.js -->
 <script src="../../js/rootConfig.js"></script>
-<!-- end-process-tags -->
+<!-- /build -->
 <script type="text/javascript">
     // 加载index模板
     seajs.use('../../js/app/tpl/index');
